# higher_order_point

./: .gitignore  Cargo.toml  README.md
examples/: hyperbola.rs  triangle.rs
src/: lib.rs  math.rs  ops.rs
