[package]
name = "higher_order_point"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
exclude = ["images/*"]
keywords = ["advancedresearch", "higher", "order", "point"]
description = "An experimental higher order data structure for 3D points"
license = "MIT"
repository = "https://github.com/advancedresearch/higher_order_point.git"
homepage = "https://github.com/advancedresearch/higher_order_point"
documentation = "https://docs.rs/advancedresearch-higher_order_point"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
