[package]
name = "advancedresearch-higher_order_point"
version = "0.3.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
exclude = ["images/*"]
keywords = ["advancedresearch", "higher", "order", "point"]
description = "An experimental higher order data structure for 3D points"
license = "MIT"
repository = "https://github.com/advancedresearch/higher_order_point.git"
homepage = "https://github.com/advancedresearch/higher_order_point"
documentation = "https://docs.rs/advancedresearch-higher_order_point"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "higher_order_point"

[dependencies]
advancedresearch-higher_order_core = "0.3.0"

[dev-dependencies]
piston = "0.49.0"
pistoncore-sdl2_window = "0.63.0"
piston2d-opengl_graphics = "0.68.0"
piston2d-graphics = "0.34.0"
vecmath = "1.0.0"
camera_controllers = "0.31.0"
